--- a/public/partials/technologies.html
+++ b/public/partials/technologies.html
@@ -1,5 +1,7 @@
 <div ng-controller="TechnologiesController as controller" class="container-fluid" >
-    <h2>Tecnologias</h2>
+    <h2 style="font-weight: 300; font-family: Roboto; padding-top: 15px; padding-left: 15px; padding-right: 15px;">
+        Tecnologias registradas en SigeTEC
+    </h2>
     <div ng-show="controller.noTechnologies" class="alert alert-info">
         <p>No hay tecnologias registradas.</p>
     </div>
@@ -7,7 +9,7 @@
         <p>{{infoMessage}}</p>
     </div>
     <br />
-    <md-content class="md-padding" layout-xs="column" layout="row">
+    <!-- <md-content class="md-padding" layout-xs="column" layout="row">
         <md-list flex>
             <md-list-item class="md-3-line" ng-repeat="technology in controller.technologies" ng-click="controller.editTechnology(technology)">
                 <div style="border-left: solid 2pt #333; padding-left: 3pt;" class="md-list-item-text" layout="column">
@@ -18,5 +20,40 @@
                 <span class="md-secondary badge">{{technology.status}}</span>
             </md-list-item>
         </md-list>
-    </md-content>
+    </md-content> -->
+    <div class="row" style="height:100%;">
+        <md-content style="width: 100%; border-radius: 10px; box-shadow: 0px 2px 10px #cbc7c7; margin-left: 10px; margin-right: 10px;">
+            <div style="margin:2%">
+                <table datatable="ng" class="row-border hover">
+                        <thead>
+                            <tr>
+                                <th style="text-align: center; color: #75797d; font-size: 14px">Id</th>
+                                <th style="text-align: center; color: #75797d; font-size: 14px">Nombre</th>
+                                <th style="text-align: center; color: #75797d; font-size: 14px">Descripción</th>
+                                <th style="text-align: center; color: #75797d; font-size: 14px">Investigador</th>
+                                <th style="text-align: center; color: #75797d; font-size: 14px">Tipo</th>
+                                <th style="text-align: center; color: #75797d; font-size: 14px">Detalles</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="technology in controller.technologies" style="color: rgb(105, 105, 107); font-size: 14px">
+                                <td style="text-align: center">{{ technology.technologyId }}</td>
+                                <td style="width: 25%; text-align: center">{{ technology.name }}</td>
+                                <td style="width: 25%; text-align: center">{{ (technology.description | limitTo: 130) || 'Sin descripción' }}</td>
+                                <td style="width: 22%; text-align: center">{{ technology['principal-researcher-email'] }}</td>
+                                <td>
+                                    <div style="vertical-align: top; text-align: center;">
+                                        <span ng-show="{{technology['granted-date'] != undefined}}" class="badge" style="background-color: #D51B23;">Patente</span>
+                                        <span ng-show="{{technology['granted-date'] == undefined}}" class="badge" style="background-color: #D51B23;">Tecnología</span>
+                                    </div>
+                                </td>
+                                <td style="text-align: center">
+                                    <img src="img/view.png" style="width:40%; cursor: pointer" ng-click="controller.editTechnology(technology)"/>
+                                </td>
+                            </tr>
+                        </tbody>
+                </table>
+            </div>
+        </md-content>
+    </div>
 </div>
