Help button added to text-kind fields

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -363,3 +363,11 @@ img.helpIcon:hover {
 md-toolbar.appTopBar {
     position: fixed;
 }
+
+.angular-popover-container {
+    z-index: 99 !important;
+}
+
+.with-help-icon {
+    width: 90%;
+}
