--- a/public/partials/technologies.html
+++ b/public/partials/technologies.html
@@ -1,4 +1,4 @@
-<div ng-controller="TechnologiesController as controller" class="container-fluid" >
+<div ng-controller="TechnologiesController as controller" class="container-fluid" style="min-height: 85vh">
     <h2 style="font-weight: 300; font-family: Roboto; padding-top: 15px; padding-left: 15px; padding-right: 15px;">
         Tecnologias registradas en SigeTEC
     </h2>
