--- a/public/partials/technologies.html
+++ b/public/partials/technologies.html
@@ -21,7 +21,7 @@
             </md-list-item>
         </md-list>
     </md-content> -->
-    <div class="row" style="height:100%;">
+    <div class="row" style="height:100%; margin-bottom: 30px;">
         <md-content style="width: 100%; border-radius: 10px; box-shadow: 0px 2px 10px #cbc7c7; margin-left: 10px; margin-right: 10px;">
             <div style="margin:2%">
                 <table datatable="ng" class="row-border hover">
