--- a/public/partials/technology-form.html
+++ b/public/partials/technology-form.html
@@ -1401,6 +1401,7 @@
         <div
           class="formgroup"
           ng-if="controller.currentNavItem =='FNI' && controller.showRegistrationDate"
+          style="margin-top: 10px;"
         >
           <md-content
             class="layout-padding"
