--- a/public/partials/technology-details.html
+++ b/public/partials/technology-details.html
@@ -2,14 +2,13 @@
   <form ng-cloak>
     <md-toolbar style="color:#75797d">
       <div class="md-toolbar-tools">
-        <h2>Detalles de tecnologia</h2>
+        <h2>Detalles de tecnología</h2>
         <span flex></span>
         <md-button class="md-icon-button" ng-click="cancel()">
           <img src="img/delete.png" style="width:100%; opacity: 0.5" />
         </md-button>
       </div>
     </md-toolbar>
-
     <md-dialog-content>
       <div class="md-dialog-content">
         <span class="badge" style="background-color: #D51B23; font-size: 15px">Nombre de la tenología</span>
@@ -34,7 +33,6 @@
         </p>        
       </div>
     </md-dialog-content>
-
     <md-dialog-actions layout="row">
       <md-button ng-click="cancel()">
         Cerrar
