--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -99,7 +99,7 @@
                 <div class="col-12">
                     <div data-aos="fade-up" data-aos-delay="200" data-aos-once="true" id="mainSecUvLogo"></div>
                 </div>
-                <div class="col-12 justify-content-end align-items-end align-content-end align-self-end" style="/*max-height:55px;*/"><button class="btn btn-link btn-block arrowBtn" type="button" id="nextBtn"><i class="material-icons" data-bs-hover-animate="bounce" style="font-size:45px;">keyboard_arrow_down</i></button></div>
+                <div class="col-12 justify-content-end align-items-end align-content-end align-self-end"><button class="btn btn-link btn-block arrowBtn" type="button" id="nextBtn"><i class="material-icons" data-bs-hover-animate="bounce" style="font-size:45px;">keyboard_arrow_down</i></button></div>
             </div>
         </div>
     </section>
@@ -169,9 +169,9 @@
                     <div class="col col-12 col-xs-12 col-md-auto" style="color:rgb(255,255,255);">
                         <p style="padding:0;/*margin:0;*/">Redes Sociales:</p>
                         <ul class="d-flex justify-content-center align-items-center align-content-center mx-auto" style="padding:0;">
-                            <li><a href="https://www.facebook.com/universidaddelvalle"><img src="http://www.univalle.edu.co/images/footericons/facebook.png" style="padding:5px;"></a></li>
-                            <li><a href="https://www.youtube.com/user/universidaddelvalle1"><img src="http://www.univalle.edu.co/images/footericons/youtube.png" style="padding:5px;"></a></li>
-                            <li><a href="https://twitter.com/univallecol"><img src="http://www.univalle.edu.co/images/footericons/twitter.png" style="padding:5px;"></a></li>
+                            <li><a href="https://www.facebook.com/universidaddelvalle"><img src="./../img/facebook.png" style="padding:5px;"></a></li>
+                            <li><a href="https://www.youtube.com/user/universidaddelvalle1"><img src="./../img/youtube.png" style="padding:5px;"></a></li>
+                            <li><a href="https://twitter.com/univallecol"><img src="./../img/twitter.png" style="padding:5px;"></a></li>
                         </ul>
                     </div>
                 </div>
