--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,7 +19,7 @@ a {
 .message {
     /*max-width: 1050px;*/
     margin: 40px auto;
-    box-shadow: 0 5px 10px 0 rgba(0,0,0,0.2),0 1px 1px 0 rgba(0,0,0,0.14),0 2px 1px -1px rgba(0,0,0,0.12);
+    box-shadow: 0 0px 10px 0 rgba(0,0,0,0.2),0 1px 1px 0 rgba(0,0,0,0.14),0 2px 1px -1px rgba(0,0,0,0.12);
     border-radius: 10px;
     background: rgb(250, 250, 250);;
     padding: 16px 24px;
@@ -149,7 +149,7 @@ h5{
     height: auto;
     width: auto;
     max-height: 64px;
-    max-width: 230px;
+    max-width: 205px;
 }
 
 line.nv-force-link{
@@ -191,7 +191,7 @@ md-card.md-default-theme, md-card {
 .appContent {
     width: 100%;
     height: 100%; 
-    padding-bottom: 16.8px
+    padding-bottom: 16.5px
 }
 
 #loaderDiv {
@@ -398,4 +398,102 @@ md-input-container.md-icon-right>label:not(.md-no-float):not(.md-container-ignor
     color: rgb(105, 105, 107); 
     font-size: 0.84em;
     cursor: pointer;
+}
+
+#notification_count {
+    padding: 4px 7px 3px 7px;
+    background: #C00;
+    color: #ffffff;
+    font-weight: bold;
+    margin-left: 7px;
+    border-radius: 15px;
+    -moz-border-radius: 15px;
+    -webkit-border-radius: 15px;
+    position: absolute;
+    margin-top: -8px;
+    font-size: 11px;
+}
+
+.notification-bell-container {
+    position:relative
+}
+
+#notificationContainer {
+    background-color: #fff;
+    border: 1px solid rgba(100, 100, 100, .4);
+    box-shadow: 0 3px 8px rgba(0, 0, 0, .25);
+    overflow: visible;
+    position: absolute;
+    top: 70px;
+    width: 400px;
+    display: none;
+    color: black;
+    margin-left: calc(100vw/2 - 215px);
+    min-height: 150px;
+}
+
+#notificationTitle {
+    padding: 8px;
+    font-size: 0.75em;
+    background-color: #D51B23;
+    z-index: 1000;
+    width: 100%;
+    border-bottom: 1px solid #dddddd;
+    text-align: center;
+    color: white;
+}
+
+.notifications ul {
+    list-style-type: none;
+    display: inline-grid;
+    padding: 0;
+    width: 100%;
+}
+
+.notifications ul li {
+    display: block;
+    padding: 10px;
+    font-weight: 400;
+    font-size: 0.65em;
+    outline: none;
+}
+
+.notifications ul li:hover {
+    background-color: rgba(230, 230, 230, 0.75);
+    cursor: pointer;
+}
+
+#notificationsBody {
+    max-height: 200px;
+    overflow: auto;
+    /* text-align: center; */
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+  
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+  
+::-webkit-scrollbar-thumb {
+    background: #c00;
+}
+  
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+.notifications-close-button {
+    font-size: 1em;
+    font-weight: 700;
+    cursor: pointer;
+    outline: none;
+}
+
+.no-notifications-message {
+    font-size: 0.75em;
+    color: #383838b8;
+    margin: auto;
 }
