Uv footer logo added to load from local resource

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -152,7 +152,7 @@
             <div class="container">
                 <div class="row uvContactInfo">
                     <div class="col d-flex justify-content-center align-self-start col-12 col-xs-12 col-md-auto">
-                        <div style="height:159px;width:120px;background-image:url(&quot;http://www.univalle.edu.co/images/logo-footer.png&quot;);background-size:contain;background-repeat:no-repeat;background-position:center;"></div>
+                        <div style="height:159px;width:120px;background-image:url(&quot;./../img/logo-footer.png&quot;);background-size:contain;background-repeat:no-repeat;background-position:center;"></div>
                     </div>
                     <div class="col" style="color:rgb(255,255,255);">
                         <p style="/*color:rgb(255,255,255);*/margin:0px;/*font-weight:bold;*/">Universidad del Valle:</p>
