Minnor changes added to improve registered technologies public table at home page

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -116,19 +116,19 @@
                         <table datatable="ng" class="row-border hover">
                                 <thead>
                                     <tr>
-                                        <th style="text-align: center; color: #75797d; font-size: 14px">Id</th>
-                                        <th style="text-align: center; color: #75797d; font-size: 14px">Nombre</th>
-                                        <th style="text-align: center; color: #75797d; font-size: 14px">Descripción</th>
-                                        <th style="text-align: center; color: #75797d; font-size: 14px">Investigador</th>
-                                        <th style="text-align: center; color: #75797d; font-size: 14px">Tipo</th>
-                                        <th style="text-align: center; color: #75797d; font-size: 14px">Detalles</th>
+                                        <th class="table-title">Id</th>
+                                        <th class="table-title">Nombre de tecnología</th>
+                                        <th class="table-title">Descripción</th>
+                                        <th class="table-title">Email de investigador principal</th>
+                                        <th class="table-title">Tipo</th>
+                                        <!-- <th class="table-title">Detalles</th> -->
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr ng-repeat="technology in controller.technologiesArray" style="color: rgb(105, 105, 107); font-size: 14px">
-                                        <td>{{ technology.technologyId }}</td>
+                                    <tr ng-repeat="technology in controller.technologiesArray" class="table-row" ng-click="controller.showDetails($index)">
+                                        <td style="text-align: center;">{{ technology.technologyId }}</td>
                                         <td style="width: 25%; text-align: center">{{ technology.name }}</td>
-                                        <td style="width: 25%; text-align: center">{{ (technology.details.answers.basic[0].description | limitTo:100) || 'Sin descripción' }}</td>
+                                        <td style="width: 25%; text-align: center">{{ (technology.details.answers.basic[0].description | limitTo:250) || 'Sin descripción' }}</td>
                                         <td style="width: 22%; text-align: center">{{ technology['principal-researcher-email'] }}</td>
                                         <td>
                                             <div style="vertical-align: top; text-align: center;">
@@ -136,9 +136,9 @@
                                                 <span ng-show="{{technology['granted-date'] == undefined}}" class="badge" style="background-color: #D51B23;">Tecnología</span>
                                             </div>
                                         </td>
-                                        <td style="text-align: center">
+                                        <!-- <td style="text-align: center">
                                             <img src="img/view.png" style="width:40%; cursor: pointer" ng-click="controller.showDetails($index)"/>
-                                        </td>
+                                        </td> -->
                                     </tr>
                                 </tbody>
                         </table>
